Add glossary of terms

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -107,4 +107,5 @@ nav:
     - Results: mgan-dr/results.md
     - API Reference: mgan-dr/api.md
   - Comparison: comparison.md
+  - Glossary: glossary.md
   - About: about.md
