Change author to Rishik Kondadadi

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Epilepsy Drug Repurposing
 site_description: Deep Learning Approaches for Epilepsy Drug Repurposing using LINCS L1000 Data
-site_author: Ravi Kondadadi
+site_author: Rishik Kondadadi
 site_url: https://fieryknight2010.github.io
 
 repo_name: fieryknight2010/fieryknight2010.github.io
